examples/negative/ffi/extern_missing_ffi_capability.kai
# Negative fixture (#536 / FFI surface validation): an `extern "C"
# fn` declaration omits the `/ Ffi` row. The capability discipline
# pinned in CLAUDE.md baseline architecture requires every extern
# site to surface `Ffi`, otherwise the load-bearing claim "FFI
# crosses to C via the `Ffi` capability" is vacuous. Parser must
# reject the declaration before lowering to a DFn shim.

extern "C" fn puts(s: String) : Int

fn main() : Int = puts("hi")
